Fix for using com.apple.eawt under mac